--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
     "version":              "9.9.9",
     "description":
 
-        "TK.",
+      "Record and replay error first callbacks in a deterministic order.",
 
     "keywords":
     [
                             "queue", "events", "callback", "control", "flow",
-                            "cadence"
+                            "cadence", "determinism", "debugging", "debug"
     ],
     "author":               "Alan Gutierrez <alan@prettyrobots.com>",
     "homepage":             "https://github.com/bigeasy/verbatim",
@@ -21,10 +21,11 @@
     },
     "dependencies":
     {
+                            "cadence":                      "1.0.x"
     },
     "devDependencies":
     {
-                            "proof":                        "1.0.x"
+                            "proof":                        "1.1.x"
     },
     "main":                 "verbatim",
     "scripts":
