Second draft of library.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies":
     {
+                            "adhere":                       "1.0.x",
                             "cadence":                      "1.0.x"
     },
     "devDependencies":
