--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "repository":
     {
                             "type": "git",
-                            "url": "http://github.com/bigeasy/verbatim.git"
+                            "url": "bigeasy/verbatim"
     },
     "dependencies":
     {
